--- a/meadowlark/package.json
+++ b/meadowlark/package.json
@@ -19,7 +19,8 @@
     "morgan": "^1.10.0",
     "multiparty": "^4.2.3",
     "node-mailer": "^0.1.1",
-    "nodemailer": "^6.9.0"
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
