--- a/meadowlark/package.json
+++ b/meadowlark/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "fortune": "^5.5.18",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.3",
