--- a/typescript_learn/package.json
+++ b/typescript_learn/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "@types/node": "^20.1.4",
     "eslint": "^8.40.0",
     "tslint": "^6.1.3",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.1"
   }
 }
