added task manager and fixed paths

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-meadowlark/node_modules
 old/
+.env
 .credentials.*
-learnings/node_modules
-learnings/CLI calc/node_modules
+Tutorials/node_modules
+Tutorials/cli_calculator/node_modules
+Tutorials/TypeScript/node_modules
+Tutorials/Task Manager/node_modules
+Tutorials/meadowlark/node_modules
+
