added an express version of model playground

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Tutorials/cli_calculator/node_modules
 Tutorials/TypeScript/node_modules
 Tutorials/Task Manager/node_modules
 Tutorials/meadowlark/node_modules
+Model Playground/node_modules
