added Store API

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Tutorials/TypeScript/node_modules
 Tutorials/Task Manager/node_modules
 Tutorials/meadowlark/node_modules
 Model Playground/node_modules
+Store API/node_modules
