--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Tutorials/Task Manager/node_modules
 Tutorials/meadowlark/node_modules
 Model Playground/node_modules
 Store API/node_modules
+Social Media Backend/node_modules
