added Jobs API, added custom Error to social media backend

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Tutorials/meadowlark/node_modules
 Model Playground/node_modules
 Store API/node_modules
 Social Media Backend/node_modules
+Jobs API/node_modules
