--- a/Jobs API/package.json
+++ b/Jobs API/package.json
@@ -1,8 +1,13 @@
 {
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "nodemon": "^2.0.22"
