started project trello api clone

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Model Playground/node_modules
 Store API/node_modules
 Social Media Backend/node_modules
 Jobs API/node_modules
+Trello API Clone/node_modules
