--- a/Trello API Clone/package.json
+++ b/Trello API Clone/package.json
@@ -1,12 +1,20 @@
 {
+  "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
