added Link Shortener project

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Store API/node_modules
 Social Media Backend/node_modules
 Jobs API/node_modules
 Trello API Clone/node_modules
+Link Shortener/node_modules
