--- a/Link Shortener/package.json
+++ b/Link Shortener/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "shortid": "^2.2.16",
+    "valid-url": "^1.0.9"
   },
   "scripts": {
     "start": "nodemon app.js"
