--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Social Media Backend/node_modules
 Jobs API/node_modules
 Trello API Clone/node_modules
 Link Shortener/node_modules
+Ilovepdf/node_modules
