--- a/Ilovepdf/package.json
+++ b/Ilovepdf/package.json
@@ -1,11 +1,14 @@
 {
   "main": "app.js",
+  "author": "Akorede Adewole",
   "scripts": {
     "start": "nodemon app.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.0",
+    "handlebars": "^4.7.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
