--- a/Ilovepdf/package.json
+++ b/Ilovepdf/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
