--- a/Ilovepdf/package.json
+++ b/Ilovepdf/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
