--- a/Ilovepdf/package.json
+++ b/Ilovepdf/package.json
@@ -10,7 +10,9 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
     "handlebars": "^4.7.7",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdf-poppler": "^0.2.1",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
