--- a/Ilovepdf/package.json
+++ b/Ilovepdf/package.json
@@ -2,8 +2,10 @@
   "main": "app.js",
   "author": "Akorede Adewole",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "lint": "eslint app.js"
   },
+  
   "dependencies": {
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
@@ -15,6 +17,7 @@
     "pdfkit": "^0.13.0"
   },
   "devDependencies": {
+    "eslint": "^8.46.0",
     "nodemon": "^3.0.1"
   }
 }
