--- a/Ilovepdf/package.json
+++ b/Ilovepdf/package.json
@@ -5,15 +5,16 @@
     "start": "nodemon app.js",
     "lint": "eslint app.js"
   },
-  
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "docx-pdf": "^0.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
     "pdf-poppler": "^0.2.1",
+    "pdfjs-lib": "^0.0.149",
     "pdfkit": "^0.13.0"
   },
   "devDependencies": {
