--- a/Trello API Clone/package.json
+++ b/Trello API Clone/package.json
@@ -6,13 +6,15 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.ts"
   },
   "engines": {
     "node": "18.x"
