added project structure

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ Store API/node_modules
 Social Media Backend/node_modules
 Jobs API/node_modules
 Trello API Clone/node_modules
+Trello API Clone/logs
 Link Shortener/node_modules
 Ilovepdf/node_modules
