--- a/Trello API Clone/package.json
+++ b/Trello API Clone/package.json
@@ -5,11 +5,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
   },
