--- a/Trello API Clone/package.json
+++ b/Trello API Clone/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.22"
   },
   "scripts": {
