--- a/Trello API Clone/package.json
+++ b/Trello API Clone/package.json
@@ -2,20 +2,25 @@
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "googleapis": "^126.0.1",
+    "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.4",
-    "winston": "^3.10.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.10.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.9",
